[workspace]
resolver = "2"
members = [
    "brindexer-logic",
    "brindexer-proto",
    "brindexer-server",
]

[workspace.dependencies]
anyhow = "1.0"
blockscout-display-bytes = "1.0"
tracing = "0.1"
blockscout-service-launcher = "0.14.0"
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres-array",
] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english", "english-to-cron", "signal"] }
async-trait = "0.1.83"
thiserror = "1.0.64"
derive-new = "0.7.0"
tokio = "1.40.0"
blockscout-db = { git = "https://github.com/blockscout/blockscout-rs", branch = "main" }
pretty_assertions = "1.3"

actix-web = "4"
actix-prost = { git = "https://github.com/blockscout/actix-prost" }
actix-prost-macros = { git = "https://github.com/blockscout/actix-prost" }
prost = "0.11"
serde = { version = "1" }
serde_with = { version = "2.0" }
tonic = "0.8"
actix-prost-build = { git = "https://github.com/blockscout/actix-prost" }
prost-build = "0.11"
tonic-build = "0.8"

brindexer-proto = { path = "./brindexer-proto" }
brindexer-logic = { path = "./brindexer-logic" }
config = "0.14"
serde_json = "1.0.96"
reqwest = "0.12"
futures = "0.3.31"
alloy = { version = "0.4.2", features = ["full"] }
url = "2.3.0"
actix = "0.13.1"
alloy-json-rpc = "0.4.0"
