[package]
name = "brindexer-logic"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
blockscout-display-bytes = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
tokio-cron-scheduler = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
derive-new = { workspace = true }
tokio = { workspace = true }
blockscout-db = { workspace = true }
futures = { workspace = true }
alloy = { workspace = true }
actix = { workspace = true }
url = { workspace = true }
alloy-json-rpc = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-eips = { workspace = true }
alloy-rpc-types = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
enum_dispatch = { workspace = true }
cached = { workspace = true }

[dev-dependencies]
blockscout-service-launcher = { workspace = true, features = [ 
    "test-database", "database-1_0"
    
] }
pretty_assertions = { workspace = true }
rstest = { workspace = true }


