[package]
name = "brindexer-server"
version = "0.1.0"
edition = "2021"


[dependencies]
brindexer-proto = { path = "../brindexer-proto" }
brindexer-logic = { path = "../brindexer-logic" }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
blockscout-service-launcher = { workspace = true, features = [ "database-1_0" ] }
config = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true}
serde_json = { workspace = true}
tokio = { workspace = true}
tonic = { workspace = true}
tracing = { workspace = true}
blockscout-db = { workspace = true }
url = { workspace = true }


[dev-dependencies]
blockscout-service-launcher = { workspace = true, features = [ "test-server","test-database"] }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["json"]}
